src/test/deca/context/invalid/created/binary exp/modulo_bool_float.deca
// Description :
//    test modulo entre un boolen et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type bool, L’opérande droite est de type float. Or les opérandes d’un modulo doivent être de type ‘int’

{
bool a;
float b;
int c = a % b;
}